; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dsp.c_DSP_RegisterCallback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dsp.c_DSP_RegisterCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__dsp_intcb = common dso_local global i64 0, align 8
@__dsp_def_taskcb = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @DSP_RegisterCallback(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @_CPU_ISR_Disable(i32 %5)
  %7 = load i64, i64* @__dsp_intcb, align 8
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %2, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i64, i64* %2, align 8
  store i64 %11, i64* @__dsp_intcb, align 8
  br label %14

12:                                               ; preds = %1
  %13 = load i64, i64* @__dsp_def_taskcb, align 8
  store i64 %13, i64* @__dsp_intcb, align 8
  br label %14

14:                                               ; preds = %12, %10
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @_CPU_ISR_Restore(i32 %15)
  %17 = load i64, i64* %4, align 8
  ret i64 %17
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
